CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(TestENet)

# Settings
SET		(CMAKE_CXX_STANDARD 14)
SET		(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin)


# Files
FILE(GLOB_RECURSE ENGINE_SOURCES *.cpp *.c)
FILE(GLOB_RECURSE ENGINE_HEADERS *.h *.hpp *.inl)
LINK_DIRECTORIES	(${CMAKE_SOURCE_DIR}/Libs)
INCLUDE_DIRECTORIES (
	${CMAKE_SOURCE_DIR}/Include
	
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include/cyptocpp)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include/enet)

# imgui include folder
FILE(GLOB ENET ${CMAKE_SOURCE_DIR}/Include/enet/*.*)

# glm
FILE(GLOB CRYPTOCPP ${CMAKE_SOURCE_DIR}/Include/cryptocpp/*.*)

ADD_EXECUTABLE(TestENet
	${ENET}
	${CRYPTOCPP}
) 

TARGET_LINK_LIBRARIES(TestENet enet.lib